--- a/style.css
+++ b/style.css
@@ -1,43 +1,120 @@
-audio {
-  -webkit-transition:all 0.5s linear;
-  -moz-transition:all 0.5s linear;
-  -o-transition:all 0.5s linear;
-  transition:all 0.5s linear;
-  -moz-box-shadow: 2px 2px 4px 0px #006773;
-  -webkit-box-shadow:  2px 2px 4px 0px #006773;
-  box-shadow: 2px 2px 4px 0px #006773;
-  -moz-border-radius:7px 7px 7px 7px ;
-  -webkit-border-radius:7px 7px 7px 7px ;
-  border-radius:7px 7px 7px 7px ;
+body{
+  margin: 0px;
+  padding: 0px;
+}
+#bg{
+  height: 100vh;
   width: 100%;
-  height: 60px;
-  margin-left: 30%;
-  bottom: 0; 
-  position: fixed; 
-  right: 0; 
+  position: absolute;
+  overflow: hidden;
 }
-
-#song-name {
+#bg img{
+  height: 120vh;
+  width: 105%;
+  -webkit-filter:blur(20px);
+  position: absolute;
+  top:50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  z-index: 1;
+}
+#blackLayer{
+  height: 100vh;
+  width: 100%;
+  background-color: rgba(0,0,0,.2);
+  position: absolute;
+  z-index: 99;
+}
+#main{
+  width: 25%;
+  background-color:#fff;
+  border-radius: 15px;
+  position: absolute;
+  top:50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  z-index: 999;
+}
+#image img{
+  height: 180px;
+  width: 100%;
+  margin-top: -5px;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
+#player{
+  padding: 25px;
+  color:#333;
+}
+#songTitle{
+  width:300px;
   text-align: center;
-  scale: 2;
+  font-family: monospace;
+  font-size: 18px;
+  position: absolute;
+  top:60%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+#buttons{
+  height: 50px;
+  width: 100%;
+  margin-top: 50px;
+  position:relative;
+  top:10%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+#play,#next,#pre{
+  width: 50px;
+  height: 50px;
+  border: 0;
+  background-color:royalblue;
+  border-radius: 50%;
+  outline: none;
+  cursor: pointer;
+  position: absolute;
+  top:50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+#next{
+  width: 30px;
+  height: 30px;
+  left: 70%;
+}
+#pre{
+  width: 30px;
+  height: 30px;
+  left: 30%;
+}
+#play img,#next img,#pre img{
+  position: absolute;
+  top:50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+#seek-bar{
+  width: 250px;
+  height: 5px;
+  background-color:gray;
+  display: flex;
+  border-radius: 50px;
+  margin-left: 25px;
+  cursor: pointer;
+}
+#fill{
+  height: 5px;
+  background-color:royalblue;
+  border-radius: 20px;
+}
+#handle{
+  width: 8px;
+  height: 8px;
+  background-color:royalblue;
+  border-radius: 50%;
+  margin-left: -5px;
+  transform: scale(2);
 }
 
-#song-img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 20%;
-}
 
-.btn {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-#queue {
-  margin-top: 0;
-  left: 0;
-  top: 0;
-  position: fixed;
-}
